--- a/Planner/Storyboard/Base.lproj/Main.storyboard
+++ b/Planner/Storyboard/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Plans" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gL6-tr-dcE">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Projects" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gL6-tr-dcE">
                                 <rect key="frame" x="27" y="-49" width="367" height="49"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="48"/>
@@ -28,33 +28,33 @@
                                 <rect key="frame" x="0.0" y="108" width="414" height="788"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="he0-LA-tOP">
-                                    <size key="itemSize" width="414" height="100"/>
+                                    <size key="itemSize" width="414" height="439"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="2TJ-bj-HfB" customClass="planCell" customModule="Planner" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="439"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="dRP-0L-chm">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="439"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LA4-AJ-fQh">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="439"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 </view>
-                                                <tableView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Na7-es-6wT">
-                                                    <rect key="frame" x="0.0" y="53" width="414" height="47"/>
+                                                <tableView clipsSubviews="YES" userInteractionEnabled="NO" tag="-1" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" indicatorStyle="black" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Na7-es-6wT">
+                                                    <rect key="frame" x="0.0" y="73" width="414" height="366"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <color key="sectionIndexColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <prototypes>
-                                                        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="FSR-nz-ns0">
-                                                            <rect key="frame" x="0.0" y="55.5" width="414" height="43.5"/>
+                                                        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="gray" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" focusStyle="custom" id="FSR-nz-ns0">
+                                                            <rect key="frame" x="0.0" y="55.5" width="414" height="44"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FSR-nz-ns0" id="RSS-1y-gGz">
-                                                                <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </tableViewCellContentView>
@@ -62,39 +62,50 @@
                                                         </tableViewCell>
                                                     </prototypes>
                                                 </tableView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="riM-O8-KBp">
-                                                    <rect key="frame" x="40" y="8" width="68.5" height="37"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="riM-O8-KBp">
+                                                    <rect key="frame" x="44" y="8" width="51.5" height="37"/>
                                                     <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="28"/>
                                                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qwA-DV-KK3">
+                                                    <rect key="frame" x="35" y="44" width="50" height="21"/>
+                                                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="16"/>
+                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                                 <button opaque="NO" alpha="0.0" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rWP-Ff-z8y">
-                                                    <rect key="frame" x="359" y="5" width="39" height="30"/>
-                                                    <state key="normal" title="Close"/>
+                                                    <rect key="frame" x="9" y="12" width="30" height="30"/>
+                                                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <state key="normal" title="&lt;"/>
                                                     <connections>
                                                         <action selector="closeCell:" destination="BYZ-38-t0r" eventType="touchUpInside" id="e4K-nQ-oJm"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="riM-O8-KBp" secondAttribute="trailing" constant="318.5" id="47d-7D-UoF"/>
                                                 <constraint firstAttribute="bottom" secondItem="Na7-es-6wT" secondAttribute="bottom" id="90K-Io-09Q"/>
-                                                <constraint firstAttribute="trailing" secondItem="rWP-Ff-z8y" secondAttribute="trailing" constant="16" id="9ja-3N-VPl"/>
-                                                <constraint firstItem="Na7-es-6wT" firstAttribute="top" secondItem="riM-O8-KBp" secondAttribute="bottom" constant="8" id="CEX-TS-oNo"/>
-                                                <constraint firstItem="riM-O8-KBp" firstAttribute="leading" secondItem="dRP-0L-chm" secondAttribute="leading" constant="40" id="GTf-Md-asd"/>
-                                                <constraint firstItem="rWP-Ff-z8y" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="riM-O8-KBp" secondAttribute="trailing" constant="8" symbolic="YES" id="JF6-R7-DpS"/>
+                                                <constraint firstItem="rWP-Ff-z8y" firstAttribute="leading" secondItem="dRP-0L-chm" secondAttribute="leading" constant="9" id="LDr-Y1-wxI"/>
+                                                <constraint firstItem="riM-O8-KBp" firstAttribute="leading" secondItem="rWP-Ff-z8y" secondAttribute="trailing" constant="5" id="QJc-Hi-ipM"/>
                                                 <constraint firstAttribute="trailing" secondItem="LA4-AJ-fQh" secondAttribute="trailing" id="Qzj-8I-WGW"/>
                                                 <constraint firstItem="LA4-AJ-fQh" firstAttribute="top" secondItem="dRP-0L-chm" secondAttribute="top" id="X4f-Fg-MUM"/>
+                                                <constraint firstItem="rWP-Ff-z8y" firstAttribute="top" secondItem="dRP-0L-chm" secondAttribute="top" constant="12" id="Y3h-pA-59p"/>
+                                                <constraint firstItem="qwA-DV-KK3" firstAttribute="leading" secondItem="dRP-0L-chm" secondAttribute="leading" constant="35" id="cDB-Ig-CV1"/>
                                                 <constraint firstItem="riM-O8-KBp" firstAttribute="top" secondItem="dRP-0L-chm" secondAttribute="top" constant="8" id="eEN-mP-rsm"/>
                                                 <constraint firstItem="Na7-es-6wT" firstAttribute="leading" secondItem="dRP-0L-chm" secondAttribute="leading" id="geS-4p-g4e"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="qwA-DV-KK3" secondAttribute="trailing" constant="20" symbolic="YES" id="gtz-6Z-Tf3"/>
                                                 <constraint firstAttribute="trailing" secondItem="Na7-es-6wT" secondAttribute="trailing" id="i5n-oF-I4s"/>
-                                                <constraint firstItem="rWP-Ff-z8y" firstAttribute="top" secondItem="dRP-0L-chm" secondAttribute="top" constant="5" id="oPz-la-caH"/>
+                                                <constraint firstItem="qwA-DV-KK3" firstAttribute="top" secondItem="riM-O8-KBp" secondAttribute="bottom" constant="-1" id="rEK-Y1-QKK"/>
+                                                <constraint firstItem="Na7-es-6wT" firstAttribute="top" secondItem="qwA-DV-KK3" secondAttribute="bottom" constant="8" id="wAq-95-0PR"/>
                                                 <constraint firstAttribute="bottom" secondItem="LA4-AJ-fQh" secondAttribute="bottom" id="yT0-tA-0Pu"/>
                                                 <constraint firstItem="LA4-AJ-fQh" firstAttribute="leading" secondItem="dRP-0L-chm" secondAttribute="leading" id="zwp-lr-xyS"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <gestureRecognizers/>
-                                        <size key="customSize" width="414" height="100"/>
+                                        <size key="customSize" width="414" height="439"/>
                                         <connections>
+                                            <outlet property="author" destination="qwA-DV-KK3" id="Vek-x6-OTM"/>
                                             <outlet property="closeBtn" destination="rWP-Ff-z8y" id="Hov-hY-oxw"/>
                                             <outlet property="gradView" destination="LA4-AJ-fQh" id="UJw-zN-h8s"/>
                                             <outlet property="itemList" destination="Na7-es-6wT" id="hzl-DF-5lD"/>
